--- a/style.css
+++ b/style.css
@@ -135,139 +135,55 @@ body {
       border: #e6e639 solid 5px;
         display: grid;
         grid-template-columns: 1fr 1fr; 
-        grid-template-rows: auto 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-        text-wrap: wrap;
+        grid-auto-rows: auto;
         text-align: center;
-
     }
 
 /* intro */
-        .the-scoop-intro{
-          grid-column-start: 1;
-          grid-column-end: 3;
-          grid-row-start: auto;
-          grid-row-end: auto;
+    .TS-S1 {
+      grid-column-start: 1;
+      grid-column-end: 3;
+      grid-row-start: 1;
+      grid-row-end: 2;
 
-          width:100%;
-          margin-bottom: 2rem;
-          padding: 0;
-
-          align-self: start;
-         }
-
-          .the-scoop-heading-styling {
-
-           }
-
-            .the-scoop-heading-subtitle {
-              
-            }
+      padding: 1rem;
+      margin: 1rem;    
+    }
 
 /* main content */
-        .the-scoop-content {
+        
+        .TS-S2 {
+          grid-column: 1 / 3;
 
+          grid-row: 2;
+
+          padding: 1rem;
+          margin: 1rem;
         }
 
-        /* content title */
-          .the-scoop-content-title {
-            grid-column-start: 1;
-            grid-column-end: -1;
-            grid-row-start: auto 2;
-            grid-row-end: auto -7;
+        .TS3 {
+          grid-column: 1 / 3;
 
-            width: 100%;
-            margin-bottom: 2rem;
-            padding: 0;
+          grid-row: 3;
+        }
 
-            align-self: start;
-          }
+        .TS-S4-L {
+          grid-column: 1 / 2;
 
-            .the-scoop-content-heading-styling {
+          grid-row: 4 / 5;
+        }
 
-            }
+        .TS-S4-R {
+          grid-column-start: 2;
+          grid-column-end: 3;
 
-        /* content main */
-            .the-scoop-content-main {
-
-            }
-
-              .TS-content-main-heading-styling {
-                grid-column-start: auto 1;
-                grid-column-end: auto 3;
-                grid-row-start: auto -7;
-                grid-row-end: auto -6;
-
-                margin-bottom: 1rem;
-              }
-
-          /* jacksfilms and ssniperwolf intros before the actual story starts */
-                  /* jacksfilms */
-                    .jacksfilms {
-                      grid-column-start: 1;
-                      grid-column-end: 2;
-                      grid-row-start: -7;
-                      grid-row-end: -6;
-                      border: #e63946 solid 1px;
-                      padding: auto;
-                      margin-bottom: 1rem;
-                    }
-
-                      .jacksfilms-intro-title {
-                        
-                      }
-
-                      .jacksfilms-pic {
-
-                      }
-
-                      .jacksfillms-about {
-
-                      }
-
-                  /* SSniperwolf */
-                    .ssniperwolf {
-                      grid-column-start: 2;
-                      grid-column-end: -1;
-                      grid-row-start: 1;
-                      grid-row-end: -5;
-                      border: #e63946 solid 1px;
-                      padding: auto;
-                      margin-bottom: 1rem;
-                    }
-
-                      .ssniperwolf-intro-title {
-
-                      }
-
-                      .ssniperwolf-pic {
-
-                      }
-
-                      .ssniperwolf-about {
-
-                      }
-
+          grid-row-start: 4;
+          grid-row-end: 5;
+        }
         /* The actual story part */
-          .the-scoop-content-the-story {
-
-          }
-
-              .TS-story-title{
-
-              }
-
-            .the-scoop-content-the-story p {
-
-            }
-
-              .the-scoop-quote-indent {
-
-              }
+          
 
         /* Story conclusion */
-          .the-scoop-conclusion {
-
-          }
 
           /* misc styling */
 
