--- a/style.css
+++ b/style.css
@@ -162,15 +162,16 @@ body {
         }
 
         .TS3 {
-          grid-column: 1 / 3;
-
+          grid-column-start: 1;
+          grid-column-end: 3;
           grid-row: 3;
         }
 
         .TS-S4-L {
-          grid-column: 1 / 2;
+          grid-column-start: 1;
+          grid-column-end: 2;
 
-          grid-row: 4 / 5;
+          grid-row: 4;
         }
 
         .TS-S4-R {
@@ -181,14 +182,30 @@ body {
           grid-row-end: 5;
         }
         /* The actual story part */
-          
+        .TS-S5 {
+          grid-column-start: 1;
+          grid-column-end: 3;
+
+          grid-row-start: 5;
+          grid-row-end: 6;
+
+            margin-bottom: 2rem;
+        }
+
+        .TS-S6 {
+          grid-column-start: 1;
+          grid-column-end: 3;
+
+          grid-row-start: 6;
+          grid-row-end: 7;
+        }
 
         /* Story conclusion */
 
           /* misc styling */
 
 
-
+/* I want lines */
 
               
 
