--- a/style.css
+++ b/style.css
@@ -139,7 +139,6 @@ body {
         text-align: center;
     }
 
-/* intro */
     .TS-S1 {
       grid-column-start: 1;
       grid-column-end: 3;
@@ -149,8 +148,6 @@ body {
       padding: 1rem;
       margin: 1rem;    
     }
-
-/* main content */
         
         .TS-S2 {
           grid-column: 1 / 3;
@@ -161,11 +158,14 @@ body {
           margin: 1rem;
         }
 
-        .TS3 {
+
+        .TS-S3 {
           grid-column-start: 1;
           grid-column-end: 3;
           grid-row: 3;
+            margin-bottom: 2rem;
         }
+
 
         .TS-S4-L {
           grid-column-start: 1;
@@ -174,6 +174,7 @@ body {
           grid-row: 4;
         }
 
+
         .TS-S4-R {
           grid-column-start: 2;
           grid-column-end: 3;
@@ -181,7 +182,8 @@ body {
           grid-row-start: 4;
           grid-row-end: 5;
         }
-        /* The actual story part */
+
+
         .TS-S5 {
           grid-column-start: 1;
           grid-column-end: 3;
@@ -190,7 +192,8 @@ body {
           grid-row-end: 6;
 
             margin-bottom: 2rem;
-        }
+         }
+         
 
         .TS-S6 {
           grid-column-start: 1;
@@ -200,12 +203,7 @@ body {
           grid-row-end: 7;
         }
 
-        /* Story conclusion */
 
-          /* misc styling */
-
-
-/* I want lines */
 
               
 
