--- a/style.css
+++ b/style.css
@@ -115,11 +115,9 @@ body {
               }
 
         .bottom-block {
-          grid-column-start: 1;
-          grid-column-end: 6;
-          grid-row-start: 2;
-          grid-row-end: 2;
           background-color: purple;
+          width: 100%;
+
         }
 
 /* end of header */
@@ -127,12 +125,51 @@ body {
 
 
 /* Styling for page structure */
+.all-content-sections {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* Each column takes up equal width */
+  grid-template-rows: 1fr 1fr;
+  grid-auto-columns: 1fr;
+  align-items: start;
+  background-color: #122641 0.5;
+}
 
+.alex-section {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  max-width: 100%;
+}
+
+.noor-section {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  max-width: 100%;
+  width: 100%;
+}
+
+    .corinna-section {
+      grid-column-start: 1;
+      grid-column-end: 2;
+      grid-row-start: 2;
+      grid-row-end: 3;
+      max-width: 100%;
+    }
+
+    .logan-section {
+      grid-column-start: 2;
+      grid-column-end: 3;
+      grid-row-start: 2;
+      grid-row-end: 3;
+      max-width: 100%;
+    }
 
 
     /* ---- Alex's section ---- */
     .the-scoop {
-      border: #e6e639 solid 5px;
         display: grid;
         grid-template-columns: 1fr 1fr; 
         grid-auto-rows: auto;
@@ -148,6 +185,16 @@ body {
       padding: 1rem;
       margin: 1rem;    
     }
+
+      .the-scoop-heading-styling{
+        font-size: 2rem;
+        color: #fbffc0;
+      }
+        .TS-S1 p{
+          font-size: 1rem;
+          color: #fbffc0;
+          } 
+        
         
         .TS-S2 {
           grid-column: 1 / 3;
@@ -156,6 +203,8 @@ body {
 
           padding: 1rem;
           margin: 1rem;
+
+          color: #fbffc0;
         }
 
 
@@ -164,6 +213,9 @@ body {
           grid-column-end: 3;
           grid-row: 3;
             margin-bottom: 2rem;
+
+            color: #fbffc0;
+
         }
 
 
@@ -172,7 +224,21 @@ body {
           grid-column-end: 2;
 
           grid-row: 4;
+
+          color: #fbffc0;
+
         }
+
+          .TS-S4-L h5{
+            font-size: 1rem;
+            color: #f2ff3f;
+          }
+
+          .jacksfilms-pic {
+            width: 8rem;
+            height: auto;
+              margin: auto;
+          }
 
 
         .TS-S4-R {
@@ -181,7 +247,21 @@ body {
 
           grid-row-start: 4;
           grid-row-end: 5;
+
+          color: #fbffc0;
+
         }
+
+          .TS-S4-R h5{
+            font-size: 1rem;
+            color: #ff2727;
+          }
+
+            .ssniperwolf-pic {
+              width: 8rem;
+              height: auto;
+              margin: auto;
+            }
 
 
         .TS-S5 {
@@ -192,8 +272,11 @@ body {
           grid-row-end: 6;
 
             margin-bottom: 2rem;
+
+            color: #fbffc0;
+
          }
-         
+
 
         .TS-S6 {
           grid-column-start: 1;
@@ -201,6 +284,9 @@ body {
 
           grid-row-start: 6;
           grid-row-end: 7;
+
+          color: #fbffc0;
+
         }
 
 
@@ -218,7 +304,7 @@ body {
     /* ---- Noor's section ---- */
 
     .listen-up {
-      border: #e63946 solid 1px;
+      /* border: #e63946 solid 1px; */
     }
     .listen-up h2 {
       text-align: center;
@@ -264,7 +350,7 @@ body {
     }
 
     .rev1 {
-      border: #e63946 solid 1px;
+      /* border: #e63946 solid 1px; */
       background-color: #122641;
       border-radius: 1rem;
       padding: 1rem;
@@ -278,7 +364,7 @@ body {
     }
 
     .rev2 {
-      border: #e63946 solid 1px;
+      /* border: #e63946 solid 1px; */
       background-color: #122641;
       border-radius: 1rem;
       padding: 1rem;
@@ -292,7 +378,7 @@ body {
     }
 
     .rev3 {
-      border: #e63946 solid 1px;
+      /* border: #e63946 solid 1px; */
       background-color: #122641;
       border-radius: 1rem;
       padding: 1rem;
@@ -306,7 +392,7 @@ body {
     }
 
     .rev4 {
-      border: #e63946 solid 1px;
+      /* border: #e63946 solid 1px; */
       background-color: #122641;
       border-radius: 1rem;
       padding: 1rem;
@@ -324,7 +410,9 @@ body {
 
 
     /* ---- Corinna's section ---- */
-
+    .art-and-media {
+      border: #e63946 solid 1px;
+    }
 
 
 
