--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
   PAGE / BODY
 */
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Calibri';
   color: var(--body-default-colour);
   background-color: var(--body-background-colour);
 }
@@ -35,8 +35,6 @@ body {
       width: 100%;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-      /* grid-template-rows: 1fr 1fr; */
-      /* justify-content: space-between; */
     }
 
       .header-grid {
@@ -45,15 +43,7 @@ body {
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         gap: 2rem;
       }
-        @media screen and (min-width: 800px) {
-          .header-grid {
-            width: 100%;
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-            gap: 2rem;
-          }
           
-        }
 
         .top-block {
           grid-column-start: 1;
@@ -115,7 +105,7 @@ body {
               }
 
         .bottom-block {
-          background-color: purple;
+          background-color: maroon;
           width: 100%;
 
         }
@@ -127,12 +117,24 @@ body {
 /* Styling for page structure */
 .all-content-sections {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* Each column takes up equal width */
-  grid-template-rows: 1fr 1fr;
-  grid-auto-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-rows: auto 1fr 1fr;
+  grid-columns: 1fr;
   align-items: start;
   background-color: #122641 0.5;
+    margin: 1rem;
 }
+@media screen and (max-width: 800px) {
+  .all-content-sections {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr 1fr 1fr 1fr;
+    align-items: start;
+    background-color: #122641 0.5;
+      margin: 0.5rem;
+   }
+}
+  
 
 .alex-section {
   grid-column-start: 1;
@@ -142,6 +144,15 @@ body {
   max-width: 100%;
 }
 
+  @media screen and (max-width: 800px) {
+    .alex-section {
+      grid-column-start: 1;
+      grid-column-end: 2;
+      grid-row: 1;
+      max-width: 100%;
+      }
+    }
+    
 .noor-section {
   grid-column-start: 2;
   grid-column-end: 3;
@@ -151,13 +162,32 @@ body {
   width: 100%;
 }
 
+  @media screen and (max-width: 800px) {
+    .noor-section {
+      grid-column-start: 1;
+      grid-column-end: 2;
+      grid-row: 2;
+      max-width: 100%;
+    }
+  }
+
     .corinna-section {
       grid-column-start: 1;
       grid-column-end: 2;
-      grid-row-start: 2;
-      grid-row-end: 3;
+      grid-row: 2;
       max-width: 100%;
     }
+
+      @media screen and (max-width: 800px) {
+        .corinna-section {
+          grid-column-start: 1;
+          grid-column-end: 2;
+          grid-row: 4;
+          max-width: 100%;
+        }
+      }
+
+
 
     .logan-section {
       grid-column-start: 2;
@@ -167,6 +197,15 @@ body {
       max-width: 100%;
     }
 
+       @media screen and (max-width: 800px) {
+        .logan-section {
+          grid-column-start: 1;
+          grid-column-end: 2;
+          grid-row-start: 2;
+          grid-row-end: 3;
+          max-width: 100%;
+        }
+      } 
 
     /* ---- Alex's section ---- */
     .the-scoop {
@@ -174,6 +213,22 @@ body {
         grid-template-columns: 1fr 1fr; 
         grid-auto-rows: auto;
         text-align: center;
+        background-color: #122641;
+        border-top-left-radius: 1rem;
+        border-top-right-radius: 1rem;
+        margin: 0.2rem;
+    }
+      @media screen (min-width: 800px) {
+        .the-scoop {
+          display: grid;
+          grid-template-columns: 1fr; 
+          grid-auto-rows: auto;
+          text-align: center;
+          background-color: #122641;
+          border-top-left-radius: 1rem;
+          border-top-right-radius: 1rem;
+          margin: 0.2rem;
+      }
     }
 
     .TS-S1 {
@@ -184,7 +239,10 @@ body {
 
       padding: 1rem;
       margin: 1rem;    
+      background-color: #122641;
+      border-radius: 1rem;
     }
+
 
       .the-scoop-heading-styling{
         font-size: 2rem;
@@ -215,7 +273,6 @@ body {
             margin-bottom: 2rem;
 
             color: #fbffc0;
-
         }
 
 
@@ -304,13 +361,15 @@ body {
     /* ---- Noor's section ---- */
 
     .listen-up {
-      /* border: #e63946 solid 1px; */
+      background-color: ;
     }
+
     .listen-up h2 {
       text-align: center;
       font-size: 3rem;
       color: #f1faee;
     }
+    
     .listen-headline {
       text-align: center;
       font-size: 1.5rem;
@@ -322,6 +381,12 @@ body {
       flex-direction: column;
       text-align: center;
       margin: 0.5rem;
+    }
+
+    .albms {
+      max-width: 8rem;
+      float: left;
+      padding: 0.5rem;
     }
 
     .rating {
@@ -353,13 +418,11 @@ body {
       /* border: #e63946 solid 1px; */
       background-color: #122641;
       border-radius: 1rem;
-      padding: 1rem;
-      margin: 1rem;
+      padding: 0.2rem;
+      margin: 0.5rem;
     }
 
     .albm1 {
-      width: auto;
-      float: left;
       flex: 1;
     }
 
@@ -367,13 +430,11 @@ body {
       /* border: #e63946 solid 1px; */
       background-color: #122641;
       border-radius: 1rem;
-      padding: 1rem;
-      margin: 1rem;
+      padding: 0.2rem;
+      margin: 0.5rem;
     }
 
     .albm2 {
-      width: auto;
-      float: left;
       flex: 2;
     }
 
@@ -381,13 +442,11 @@ body {
       /* border: #e63946 solid 1px; */
       background-color: #122641;
       border-radius: 1rem;
-      padding: 1rem;
-      margin: 1rem;
+      padding: 0.2rem;
+      margin: 0.5rem;
     }
 
     .albm3 {
-      width: auto;
-      float: left;
       flex: 3;
     }
 
@@ -395,13 +454,11 @@ body {
       /* border: #e63946 solid 1px; */
       background-color: #122641;
       border-radius: 1rem;
-      padding: 1rem;
-      margin: 1rem;
+      padding: 0.2rem;
+      margin: 0.5rem;
     }
 
     .albm4 {
-      width: auto;
-      float: left;
       flex: 4;
     }
 
@@ -412,12 +469,35 @@ body {
     /* ---- Corinna's section ---- */
     .art-and-media {
       border: #e63946 solid 1px;
+      background-color: #122641;
+      margin: 0.2rem
     }
 
+.corinnacontainer {
 
+ ;
+}
 
+.big-story {
+grid-row: 5;
 
+}
 
+.story-1 {
+
+}
+
+.story-2 {
+  
+}
+
+.story-3 {
+  
+}
+
+.story-4 {
+  
+}
 
 
 
@@ -427,6 +507,7 @@ body {
       flex-direction: column;
       background: rgb(29,53,87);
       background: linear-gradient(0deg, rgba(29,53,87,1) 90%, rgba(10,28,55,1) 100%);
+      border-radius: 1rem;
     }
 
     .watch-out-intro {
@@ -446,17 +527,6 @@ body {
       font-size: 2rem;
     }
 
-    @media (max-width:700px){
-      .watch-out-title{
-        font-size:3rem;
-      }
-    }
-
-    @media (max-width:700px){
-      .watch-out-subtitle{
-        font-size: 1.5rem;
-      }
-    }
 
     .watch-out-header-reviews {
       display: flex;
@@ -465,34 +535,16 @@ body {
       margin-top: 0.5rem;
     }
 
-    @media (max-width:920px) {
-      .watch-out-header-reviews{
-        flex-direction: column;
-      }
-    }
-
-    @media (max-width:920px) {
-      .header-review{
-        margin-bottom: 1rem;
-      }
-    }
-
-    @media (max-width:300px) {
-      .header-review{
-        flex-direction: column;
-        margin-bottom: 1rem;
-      }
-    }
 
     .header-review {
       display: flex;
       padding-top: 1rem;
       padding-bottom: 1rem;
       border-radius: 1rem;
-      ;
       margin-right: 1rem;
       margin-left: 1rem;
       background-color: #122641;
+      flex-direction: column;
     }
 
 
@@ -503,8 +555,8 @@ body {
     }
 
     .movie-poster {
-      width: 100px;
-      height: 150px;
+      width: 5rem;
+      height: auto;
       margin-left: 1rem;
     }
 
@@ -529,20 +581,6 @@ body {
       background-color: #122641;
     }
 
-    @media (max-width:700px){
-      .full-movie-review{
-        flex-direction: column;
-      }
-    }
-
-    @media (max-width:450px){
-      .full-movie-review{
-        flex-direction: column;
-        margin-left: 0.5rem;
-        margin-right:0.5rem;
-      }
-    }
-
 
 
 
@@ -553,15 +591,15 @@ body {
     }
 
     .large-movie-poster {
-      max-width: 200px;
-      aspect-ratio: 2 / 3;
+      width:13rem;
+      height:auto;
       margin-left: 1rem;
       margin-right: 1rem;
     }
 
     .profile-pic-img {
-      width: 25px;
-      height: 25px;
+      width: 1.5rem;
+      height: auto;
     }
 
     .review-post-section {
@@ -599,6 +637,15 @@ body {
     .full-movie-reviews-section {
       margin-top: 1rem;
       margin-bottom: 2rem;
+    }
+
+    .star-rating{
+      text-shadow: #a8dadc 0px 0px 8px;
+    }
+
+    .large-star-rating{
+      text-shadow: #a8dadc 0px 0px 8px;
+      font-size: 2rem;
     }
 
     /* ---- end of Logan's section ---- */
