--- a/style.css
+++ b/style.css
@@ -46,10 +46,6 @@ body {
           
 
         .top-block {
-          grid-column-start: 1;
-          grid-column-end: 6;
-          grid-row-start: 1;
-          grid-row-end: 1;
           background-color: green;
           display: flex;
           flex-direction: column;
@@ -63,12 +59,13 @@ body {
             width: 100px;
           }
 
-            @media screen and (min-width: 800px) {
+            @media screen and (min-width: 700px) {
               .top-block {
                 display: flex;
                 flex-direction: row;
-                width: 100%;
                 background-color: green;
+                border: solid 1rem black;
+                width: 100%;
               }
             }
 
@@ -81,13 +78,14 @@ body {
           flex-wrap: nowrap;
         }
 
-            @media screen and (min-width: 800px) {
+            @media screen and (min-width: 700px) {
               .page-nav {
                 list-style-type: none;
                 margin: 0;
                 padding: 0;
                 display: flex;
                 flex-direction: row;
+                flex-wrap: nowrap;
               }
             }
 
@@ -118,23 +116,23 @@ body {
 .all-content-sections {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-rows: auto 1fr 1fr;
-  grid-columns: 1fr;
+  grid-template-rows: auto 1fr 1fr;
+  grid-column: 1fr;
   align-items: start;
   background-color: #122641 0.5;
-    margin: 1rem;
+  margin: 1rem;
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 700px) { 
   .all-content-sections {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr 1fr 1fr 1fr;
     align-items: start;
     background-color: #122641 0.5;
-      margin: 0.5rem;
-   }
+    margin: 0.5rem;
+    width: 100%;
+  }
 }
-  
 
 .alex-section {
   grid-column-start: 1;
@@ -143,16 +141,15 @@ body {
   grid-row-end: 2;
   max-width: 100%;
 }
+@media screen and (max-width: 700px) {
+  .alex-section {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    max-width: 100%;
+  }
+}
 
-  @media screen and (max-width: 800px) {
-    .alex-section {
-      grid-column-start: 1;
-      grid-column-end: 2;
-      grid-row: 1;
-      max-width: 100%;
-      }
-    }
-    
 .noor-section {
   grid-column-start: 2;
   grid-column-end: 3;
@@ -161,15 +158,15 @@ body {
   max-width: 100%;
   width: 100%;
 }
-
-  @media screen and (max-width: 800px) {
-    .noor-section {
-      grid-column-start: 1;
-      grid-column-end: 2;
-      grid-row: 2;
-      max-width: 100%;
-    }
+@media screen and (max-width: 700px) { 
+  .noor-section {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    max-width: 100%;
   }
+}
 
     .corinna-section {
       grid-column-start: 1;
@@ -178,7 +175,7 @@ body {
       max-width: 100%;
     }
 
-      @media screen and (max-width: 800px) {
+      @media screen and (max-width: 700px) {
         .corinna-section {
           grid-column-start: 1;
           grid-column-end: 2;
@@ -197,12 +194,10 @@ body {
       max-width: 100%;
     }
 
-       @media screen and (max-width: 800px) {
+       @media screen and (max-width: 700px) {
         .logan-section {
-          grid-column-start: 1;
-          grid-column-end: 2;
-          grid-row-start: 2;
-          grid-row-end: 3;
+          grid-column: 1;
+          grid-row: 3;
           max-width: 100%;
         }
       } 
@@ -361,7 +356,8 @@ body {
     /* ---- Noor's section ---- */
 
     .listen-up {
-      background-color: ;
+      background-color: #1d3557;
+      border-radius: 1rem;
     }
 
     .listen-up h2 {
@@ -384,9 +380,10 @@ body {
     }
 
     .albms {
-      max-width: 8rem;
       float: left;
+      width: auto;
       padding: 0.5rem;
+      border-radius: 0.8rem;
     }
 
     .rating {
@@ -470,21 +467,30 @@ body {
     .art-and-media {
       border: #e63946 solid 1px;
       background-color: #122641;
-      margin: 0.2rem
+      margin: 0.2rem;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto 1fr 1fr 1fr 1fr 1fr;
+  grid-column: 1fr;
+  align-items: start;
+  background-color: red 0.5;
+  margin: 1rem;
+      
     }
 
-.corinnacontainer {
-
- ;
+.artandmediatitle {
+  grid-column:0/4;
+  grid-row:0;
 }
 
 .big-story {
-grid-row: 5;
+grid-column: 0/4
 
 }
 
 .story-1 {
-
+ 
 }
 
 .story-2 {
@@ -508,6 +514,8 @@ grid-row: 5;
       background: rgb(29,53,87);
       background: linear-gradient(0deg, rgba(29,53,87,1) 90%, rgba(10,28,55,1) 100%);
       border-radius: 1rem;
+      margin-left: 1rem;
+      margin-right: 1rem;
     }
 
     .watch-out-intro {
@@ -558,6 +566,7 @@ grid-row: 5;
       width: 5rem;
       height: auto;
       margin-left: 1rem;
+      box-shadow:#a8dadc 0px 0px 8px;
     }
 
     .full-review-link {
@@ -575,13 +584,17 @@ grid-row: 5;
       align-items: center;
       padding: 1rem;
       margin: 1rem;
-      margin-left: 4rem;
-      margin-right: 4rem;
+      margin-left: 1rem;
+      margin-right: 1rem;
       border-radius: 1rem;
       background-color: #122641;
     }
 
-
+    @media (max-width:450px){
+      .full-movie-review{
+        flex-direction: column;
+      }
+    }
 
 
     .review-content-section {
@@ -594,7 +607,7 @@ grid-row: 5;
       width:13rem;
       height:auto;
       margin-left: 1rem;
-      margin-right: 1rem;
+      box-shadow:#a8dadc 0px 0px 8px;
     }
 
     .profile-pic-img {
@@ -683,8 +696,8 @@ footer {
 }
 
 footer img {
-  width: 100px;
-  height: 100px;
+  width: 8rem;
+  height: auto;
 }
 
 footer ul {
